--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta name="keywords" content="デザイン,Webデザイン,WEBデザイン,ウェブデザイン,デザインスクール,webdesign,カリキュラム,スキルアップ,プログラミング,キャリアアップ,デザイナー,プログラマー">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<meta name="apple-mobile-web-aptitle" content="デザメモ" />
-<meta property="og:title" content="デザメモ" />
+<meta name="apple-mobile-web-aptitle" content="デザメモ つくるをのばす。初心者向けWebデザインカリキュラム" />
+<meta property="og:title" content="デザメモ つくるをのばす。初心者向けWebデザインカリキュラム" />
 <meta property="og:description" content="つくるをのばす。初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
 <meta property="og:url" content="https://www.conviction-inc/dezamemo.com" />
 <meta property="og:image" content="https://www.conviction-inc/dezamemo.com/assets/img/og/ogimage.png" /><!--絶対パスで記述-->
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <!-- summary summary_large_image photo gallery appから選ぶ -->
 <!-- <meta name="twitter:site" content="" /> --><!--twitterユザネ記述-->
-<meta name="twitter:title" content="デザメモ" />
+<meta name="twitter:title" content="デザメモ つくるをのばす。初心者向けWebデザインカリキュラム" />
 <meta name="twitter:url" content="https://www.conviction-inc/dezamemo.com" />
 <meta name="twitter:description" content="つくるをのばす。初心者向けWebデザインカリキュラム 実践的な課題で実務でも通用するスキルを身につけましょう。" />
 <meta name="twitter:image" content="https://www.conviction-inc/dezamemo.com/assets/mg/og/ogimage.png" /><!--絶対パスで記述-->
