--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="デザメモ" />
 <meta property="og:locale" content="ja_JP" />
-<meta name="twitter:card" content="summary_large_image" />
-<!-- summary summary_large_image photo gallery appから選ぶ -->
+<meta name="twitter:card" content="summary_large_image" /><!-- summary summary_large_image photo gallery appから選ぶ -->
 <!-- <meta name="twitter:site" content="" /> --><!--twitterユザネ記述-->
 <meta name="twitter:title" content="デザメモ つくるをのばす。初心者向けWebデザインカリキュラム" />
 <meta name="twitter:url" content="https://www.conviction-inc/dezamemo.com" />
@@ -61,28 +60,28 @@
             <li class="p-planWrapPC">
               <img class="p-planPCImg" src="assets/img/subsc-plan.png" alt="サブスクプラン">
               <div class="p-planTopPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+                <a href="https://buy.stripe.com/28o03ngq97924Ni28f" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
               <div class="p-planBtmPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+                <a href="https://buy.stripe.com/28obM58XH9haa7C6ow" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
             </li>
             <li class="p-planWrapPC">
               <img class="p-planPCImg" src="assets/img/5month-plan.png" alt="5ヶ月プラン">
               <div class="p-planTopPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/3cs6rL7TDbpi7ZubIR" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtmPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/8wM9DXa1LeBu5RmdR0" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
             </li>
             <li class="p-planWrapPC">
               <img class="p-planPCImg" src="assets/img/10month-plan.png" alt="10ヶ月プラン">
               <div class="p-planTopPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/9AQ3fzddX8d64Ni00b" target="_blank" rel="noopener noreferrer"><img class="p-planTopPC__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtmPC">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/14keYh0rb792bbGeV6" target="_blank" rel="noopener noreferrer"><img class="p-planBtmPC__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
             </li>
           </ul>
@@ -208,28 +207,28 @@
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/subsc-plan.png" alt="サブスクプラン">
               <div class="p-planTop">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+                <a href="https://buy.stripe.com/28o03ngq97924Ni28f" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
+                <a href="https://buy.stripe.com/28obM58XH9haa7C6ow" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/subsc-btn.png" alt="サブスクプランを購入"></a>
               </div>
             </li>
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/5month-plan.png" alt="5ヶ月プラン">
               <div class="p-planTop">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/3cs6rL7TDbpi7ZubIR" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/8wM9DXa1LeBu5RmdR0" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/5month-btn.png" alt="5ヶ月プランを購入"></a>
               </div>
             </li>
             <li class="p-planWrap">
               <img class="p-planWrap__img" src="assets/img/10month-plan.png" alt="10ヶ月プラン">
               <div class="p-planTop">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/9AQ3fzddX8d64Ni00b" target="_blank" rel="noopener noreferrer"><img class="p-planMB__topBtn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
               <div class="p-planBtm">
-                <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
+                <a href="https://buy.stripe.com/14keYh0rb792bbGeV6" target="_blank" rel="noopener noreferrer"><img class="p-planMB__btn" src="assets/img/10month-btn.png" alt="10ヶ月プランを購入"></a>
               </div>
             </li>
           </ul>
@@ -327,9 +326,9 @@
   <footer class="l-footer">
     <nav>
       <ul class="p-footerNav">
-        <li><a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer">運営会社</a></li>
-        <li><a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer">プライバシーポリシー</a></li>
-        <li><a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer">特商法取引法に基づく表記</a></li>
+        <li><a href="https://www.conviction-inc.com/" target="_blank" rel="noopener noreferrer">運営会社</a></li>
+        <li><a href="pages/privacy.html">プライバシーポリシー</a></li>
+        <li><a href="pages/law.html" target="_blank" rel="noopener noreferrer">特商法取引法に基づく表記</a></li>
       </ul>
     </nav>
     <small>&copy; 2024 CONVICTION All Rights Reserved.</small>
