--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <ul class="p-footerNav">
         <li><a href="https://www.conviction-inc.com/" target="_blank" rel="noopener noreferrer">運営会社</a></li>
         <li><a href="pages/privacy.html">プライバシーポリシー</a></li>
-        <li><a href="pages/law.html" target="_blank" rel="noopener noreferrer">特商法取引法に基づく表記</a></li>
+        <li><a href="pages/law.html">特商法取引法に基づく表記</a></li>
       </ul>
     </nav>
     <small>&copy; 2024 CONVICTION All Rights Reserved.</small>
