--- a/privacy/index.html
+++ b/privacy/index.html
@@ -95,7 +95,8 @@ c. その他法令に違反することとなる場合<br><br>
 Eメールアドレス：dev@conviction-inc.com<br><br>
 
 以上<br>
-2024年6月5日制定
+2022年11月7日制定<br>
+2024年6月5日改訂
 </div>
 </body>
 </html>
