--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </li>
           </ul>
         </div>
-        <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン"></div>
+        <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン注意文言"></div>
       </div>
       <div class="p-contentsMB">
         <h2><img class="p-planTitleMB" src="assets/img/example-title.png" alt="制作例"></h2>
