--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
   <main>
     <div class="pc-only">
       <div>
-        <img class="p-copyPC" src="assets/img/copy-pc.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
+        <img class="p-copyPC smooth" src="assets/img/copy-pc.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
         <img class="l-visualPC" src="assets/img/main-visual-pc.png" alt="トップビジュアル">
       </div>
-      <div class="p-contentsPC">
+      <div class="p-contentsPC fade">
         <h2><img class="p-titlePC" src="assets/img/merit-title-pc.png" alt="デザメモ3つのメリット"></h2>
         <div class="p-meritPC">
           <img class="p-meritPC__img" src="assets/img/merit-pc.png" alt="3つのメリット">
         </div>
       </div>
-      <div class="p-contentsPC">
+      <div class="p-contentsPC fade">
         <div class="p-curriPC">
           <img class="p-curriPC__img" src="assets/img/curri-pc.png" alt="カリキュラム内容">
         </div>
       </div>
-      <div class="p-contentsPC">
+      <div class="p-contentsPC fade">
         <h2><img class="p-otherTitlePC" src="assets/img/plan-title.png" alt="プラン"></h2>
         <div class="p-planPC">
           <ul>
@@ -90,7 +90,7 @@
           <img class="p-planTextPC__text" src="assets/img/plan-text-pc.png" alt="大きな手直しも無く、スピード感を持って取り組まれている方で、それぞれ3ヶ月程度が目安期間です。">
         </div>
       </div>
-      <div class="p-contentsPC">
+      <div class="p-contentsPC fade">
         <h2><img class="p-exampleTitlePC" src="assets/img/example-title.png" alt="制作例"></h2>
         <div class="p-exampleTextPC">
           <img class="p-exampleTextPC__text" src="assets/img/example-textTop-pc.png" alt="添削による、バナーデザインのブラッシュアップ例を少しだけ公開！ちょっとした工夫で、デザインは一気に変わるものです。">
@@ -102,7 +102,7 @@
           <img class="p-exampleTextPCBtm__text" src="assets/img/example-textBtm-pc.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
         </div>
       </div>
-      <div class="p-contentsPC">
+      <div class="p-contentsPC fade">
         <h2><img class="p-exampleTitlePC" src="assets/img/voice-title.png" alt="受講者の声"></h2>
         <div class="p-voicePC">
           <img class="p-examplePC__img" src="assets/img/voice-pc.png" alt="受講者の声詳細">
@@ -180,12 +180,12 @@
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
       <div class="l-topContents">
-        <img class="p-copyMB" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
+        <img class="p-copyMB smooth" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
         <button class="p-topBtnMB" type="button">
           <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
         </button>
       </div>
-      <div class="p-contentsMB">
+      <div class="p-contentsMB fade">
         <h2><img class="p-titleMB" src="assets/img/merit-title-mb.png" alt="デザメモ3つのメリット"></h2>
         <div class="p-meritMB">
           <ul>
@@ -195,12 +195,12 @@
           </ul>
         </div>
       </div>
-      <div class="p-contentsMB">
+      <div class="p-contentsMB fade">
         <div class="p-curriMB">
           <img class="p-curriMB__img" src="assets/img/curri-mb.png" alt="カリキュラム内容">
         </div>
       </div>
-      <div class="p-contentsMB">
+      <div class="p-contentsMB fade">
         <h2><img class="p-planTitleMB" src="assets/img/plan-title.png" alt="プラン"></h2>
         <div class="p-planMB">
           <ul>
@@ -235,7 +235,7 @@
         </div>
         <div class="p-planTextMB"><img class="p-planTextMB__text" src="assets/img/plan-text-mb.png" alt="プラン注意文言"></div>
       </div>
-      <div class="p-contentsMB">
+      <div class="p-contentsMB fade">
         <h2><img class="p-planTitleMB" src="assets/img/example-title.png" alt="制作例"></h2>
         <div class="p-exampleTextMB">
           <img class="p-exampleTextMB__text" src="assets/img/example-textTop-mb.png" alt="添削による、バナーデザインのブラッシュアップ例を少しだけ公開！ちょっとした工夫で、デザインは一気に変わるものです。">
@@ -247,7 +247,7 @@
           <img class="p-exampleTextMBBtm__text" src="assets/img/example-textBtm-mb.png" alt="※元のデザインを尊重してフィードバックをしますので、独創性も活かせます！">
         </div>
       </div>
-      <div class="p-contentsMB">
+      <div class="p-contentsMB fade">
         <h2><img class="p-planTitleMB" src="assets/img/voice-title.png" alt="受講者の声"></h2>
         <div class="p-voiceMB">
           <img class="p-meritPC__img" src="assets/img/voice-mb.png" alt="受講者の声詳細">
@@ -321,6 +321,9 @@
           <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-btmBtnImg" src="assets/img/btm-btn.png" alt="友だち追加でお問い合わせ"></a>
         </button>
       </div>
+    </div>
+    <div class="p-pageTop">
+      <img class="c-pageTop" src="assets/img/page-top.png" alt="ページトップへ">
     </div>
   </main>
   <footer class="l-footer">
