--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
 <body>
 <div class="l-wrap">
+  <div id="loader">
+    <p class="txt">ローディング中</p>
+  </div>
   <header class="l-header">
     <h1><img class="p-logo" src="assets/img/dezamemo-logo.png" alt="デザメモ"></h1>
     <button class="p-topBtn" type="button">
