--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
       <div class="l-topContents">
-        <img class="p-copyMB smooth" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
+        <img class="p-copyMB" id="load-mob" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
         <button class="p-topBtnMB" type="button">
           <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
         </button>
