--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 <body>
 <div class="l-wrap">
   <div id="loader">
-    <p class="txt">ローディング中</p>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
   </div>
   <header class="l-header">
     <h1><img class="p-logo" src="assets/img/dezamemo-logo.png" alt="デザメモ"></h1>
