--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <main>
     <div class="pc-only">
       <div>
-        <img class="p-copyPC smooth" src="assets/img/copy-pc.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム">
+        <div id="loadPC"><img class="p-copyPC" src="assets/img/copy-pc.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム"></div>
         <img class="l-visualPC" src="assets/img/main-visual-pc.png" alt="トップビジュアル">
       </div>
       <div class="p-contentsPC fade">
@@ -187,7 +187,7 @@
     <div class="mb-only">
       <img class="l-visualMB" src="assets/img/main-visual-mb.png" alt="トップビジュアル">
       <div class="l-topContents">
-        <div id="loadMob"><img class="p-copyMB" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム"></div>
+        <div id="loadMB"><img class="p-copyMB" src="assets/img/copy-mb.png" alt="マンツーマンで基礎の基礎から徹底指導！カリキュラム＋コーチング型デザイン学習プログラム"></div>
         <button class="p-topBtnMB" type="button">
           <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
         </button>
