--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <img class="l-visualPC" src="assets/img/main-visual-pc.png" alt="トップビジュアル">
       </div>
       <div class="p-contentsPC fade">
+        <img class="p-titlePC__banner" src="assets/img/banner-500tester.png" alt="テスターバナー">
+      </div>
+      <div class="p-contentsPC fade">
         <h2><img class="p-titlePC" src="assets/img/merit-title-pc.png" alt="デザメモ3つのメリット"></h2>
         <div class="p-meritPC">
           <img class="p-meritPC__img" src="assets/img/merit-pc.png" alt="3つのメリット">
@@ -191,6 +194,9 @@
         <button class="p-topBtnMB" type="button">
           <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-topBtnMB__img" src="assets/img/top-btn.png" alt="友だち追加からはじめる"></a>
         </button>
+      </div>
+      <div class="p-contentsMB fade">
+        <img class="p-titleMB__banner" src="assets/img/banner-500tester.png" alt="テスターバナー">
       </div>
       <div class="p-contentsMB fade">
         <h2><img class="p-titleMB" src="assets/img/merit-title-mb.png" alt="デザメモ3つのメリット"></h2>
