--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img class="l-visualPC" src="assets/img/main-visual-pc.png" alt="トップビジュアル">
       </div>
       <div class="p-contentsPC fade">
-        <img class="p-titlePC__banner" src="assets/img/banner-500tester.png" alt="テスターバナー">
+        <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-titlePC__banner" src="assets/img/banner-500tester.png" alt="テスターバナー"></a>
       </div>
       <div class="p-contentsPC fade">
         <h2><img class="p-titlePC" src="assets/img/merit-title-pc.png" alt="デザメモ3つのメリット"></h2>
@@ -196,7 +196,7 @@
         </button>
       </div>
       <div class="p-contentsMB fade">
-        <img class="p-titleMB__banner" src="assets/img/banner-500tester.png" alt="テスターバナー">
+        <a href="https://lin.ee/nksVy8W" target="_blank" rel="noopener noreferrer"><img class="p-titleMB__banner" src="assets/img/banner-500tester.png" alt="テスターバナー"></a>
       </div>
       <div class="p-contentsMB fade">
         <h2><img class="p-titleMB" src="assets/img/merit-title-mb.png" alt="デザメモ3つのメリット"></h2>
